2009-12-07  Juri Linkov  <juri@jurta.org>

	Correctly restore original Isearch point.  (Bug#4994)

	* isearch.el (isearch-mode): Move `isearch-push-state' after
	`(run-hooks 'isearch-mode-hook)'.
	(isearch-cancel): When `isearch-push-state-function' is defined,
	let-bind `isearch-cmds' to the first state (the last element of
	`isearch-cmds') and call `isearch-top-state' (it calls pop-state
	function and restores the original point).  Otherwise, move point
	to `isearch-opoint'.

2009-12-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-cmds.el (ucs-names): Weed out at compile-time the
	chars that don't have names, so the table can be built much faster at
	run-time.

2009-12-07  Chong Yidong  <cyd@stupidchicken.com>

	* vc-bzr.el (vc-bzr-annotate-command): More elegant form for last
	change.  Suggested by David Kastrup.

	* simple.el (compose-mail): Check for incompatibilities and warn.
	(compose-mail-user-agent-warnings): New option.

2009-12-07  Dan Nicolaescu  <dann@ics.uci.edu>

	Support showing a single log entry from vc-annotate.
	* vc.el (print-log): Add a new argument: START-REVISION.
	(vc-print-log-internal): Add a new optional argument and
	pass it to the backend.
	(vc-print-log, vc-print-root-log): Adjust callers.
	* vc-annotate.el (vc-annotate-show-log-revision-at-line): If a
	buffer already displays the requested log entry, use it.
	Otherwise display only the log entry in question.
	* vc-svn.el (vc-svn-print-log):
	* vc-mtn.el (log-view-file-re):
	* vc-hg.el (vc-hg-state):
	* vc-git.el (vc-git-print-log): Add support for new argument START-REVISION.
	(vc-git-show-log-entry): Return t on success.
	* vc-bzr.el (vc-bzr-print-log): Add support new argument START-REVISION.
	(vc-bzr-show-log-entry): Return t on success.
	* vc-rcs.el (vc-rcs-print-log):
	* vc-sccs.el (vc-sccs-print-log):
	* vc-cvs.el (vc-cvs-print-log): Add new argument, ignore it.

2009-12-07  Michael Kifer <kifer@cs.stonybrook.edu>
